src/stylesheet.css
* {
   font-family: 'Roboto', sans-serif;
}

.search-bar {
  width: 100%;
  padding-left: 30px;
  padding-right: 30px
}

.navbar {
  background-color: royalblue;
}

.navbar-brand {
  font-family: 'PRIMETIME', sans-serif !important;
}

.news-title, .selected-title, .pop-title, 
.ptw-head {
  color: #333333;
  font-family: 'Roboto Black', sans-serif;
}

.news-container:hover .news-title {
  text-decoration: underline;
}

.news-container:hover .pop-title {
  text-decoration: underline;
}

.nl-container {
  padding-bottom: 20px;
}

.date-author, .selected-dateAuthor {
  color: #555555;
}

.news-content, .news-description {
  color: #444444
}

.pop-title {
  font-size: 13px;
  overflow: hidden;
}

.page-content {
  padding-left: 30px;
  padding-right: 30px
}

.news-img {
  padding-bottom: 10px;  
  width: 100%;
  max-height: 280px
}

.pop-img {
  float: left;
  padding-right: 10px;
  width: 100px
}

@media only screen and (min-width: 991.98px) {
  .page-content {
    padding-left: 80px;
    padding-right: 80px
  }

  .navbar {
    padding-right: 40px;
    padding-left: 40px
  }

  .search-bar {
    padding-left: 100px;
    padding-right: 100px
  }

  .nl-container {
    padding-bottom: 45px;
  }

  .pop-news {
    padding-top: 300px
  }

  .selected-news-img {
    width: 32rem !important;
  }

  .news-img {
    float: left;
    padding-right: 10px;
    /*padding-bottom: 20px;*/
    width: 230px;
    max-height: 170px
  }

  .news-title {
    font-size: 15px;
  }

  .date-author {
    font-size: 10px;
  }

  .news-description {
    font-size: 12px;
  }

  .selected-title {
    font-size: 35px !important;
  }

  .news-content {
    font-size: 16px
  }
}  

